- Uninstall of module did not work completely. Some installed checks still returned true.
- Wrong parent ID in z-push mail folders which prevented sub/sub/sub folders from syncing 

19-01-2015 6.1.16
- Resources not showing

19-01-2015 6.1.15
- $config['calendar_tasklist_show'] option is merge from 6.0
- $config['debug_usernames'] for turning on debug mode for specific users.
- Replace recurring series completely with caldav to avoid problems of buggy clients
- Repeating event with caldav that started on 0:00 hours repeated on wrong weekday
- Replace contact with user in calendar event adds appointment to calendar now.
- Fixed open task from context menu in calendar
- Projects2: button to duplicate incomes and expenses.

12-01-2015 6.1.14
- Billing license check error

07-01-2015 6.1.13
- License check failed in 6.1.12

07-01-2015 6.1.12
- Removed project time entry overlapping check
- Replace namespace delimiter with dash in listeners cache
- Fixed to field in email sent folder in wide view.
- Restored windows binaries for zip and libwbxml
- Automatically delete file when download link expires is available again
- Projects2: added column 'customer' for sub projects.
- Timeregistration: If time is next day was checked the field will be checked when editing the time entry
- Billing: fixed due date for new created recurring events
- Cut attribute lengths when importing tickets
- Deleting task category deleted tasks too.
- Permission error when creating a project in the root and template inherits type from parent
- Notes: Fixed problem with creating notes from the "New" menu in other modules
- Correct week number in disapproval email of time entry
- Custom fields: fix to display custom fields of type Heading.
- Custom fields: fixed on-click event of Contact/Company custom fields.

15-12-2014 6.1.11
- Fixed mail send error that occurred with php < 5.4

13-12-2014 6.1.10
- Invalid build 6.1.9

12-12-2014 6.1.9